# easy_shell_os

./: Cargo.toml  README.md
easy_shell_core/: Cargo.toml
easy_shell_core/examples/: move_box.rs
easy_shell_core/src/: lib.rs
easy_shell_core/src/asc_art/: animal.rs
easy_shell_core/src/math/: fraction.rs
easy_shell_core/src/math/tow_d/: mod.rs  rectangle.rs
easy_shell_core/src/util/asc_art/: animal.rs  mod.rs
easy_shell_core/src/util/math/tow_d/: mod.rs
easy_shell_logic/: Cargo.toml
examples/: move_box.rs
src/: app.rs  event.rs  lib.rs  main.rs
src/app/: frame.rs  mod.rs
src/app/element/: bbox.rs
src/util/: mod.rs
src/util/math/: matrix.rs  mod.rs
src/util/math/tow_d/: rectangle.rs
