[package]
name = "easy_shell_os"
version = "0.1.0"
authors = ["AMan <AMan@runningcoders.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.15"
termion = { version = "1.5", optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.12.0"
actix-rt = "2.2.0"

[features]
default = ["termion"]