[package]
name = "easy_shell_os"
version = "0.1.0"
authors = ["AMan <AMan@runningcoders.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "^0.16.0"
crossterm = "^0.22.1"
tokio = { version = "^1.14.0", features = ["full"] }
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.72"
lazy_static = "^1.4.0"

[[example]]
name = "move_box"