[package]
name = "easy_shell_core"
version = "0.1.0"
authors = ["AMan <AMan@runningcoders.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "^0.16.0"
crossterm = "^0.22.1"
async-std = { version = "^1.11.0", features = ["attributes"] }
lazy_static = "^1.4.0"

[[example]]
name = "move_box"