[package]
name = "easy_shell_logic"
version = "0.1.0"
authors = ["AMan <AMan@runningcoders.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.72"
lazy_static = "^1.4.0"